--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ kotlin {
     }
 }
 
+bootRun {
+    systemProperty 'spring.profiles.active', 'testdata'
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
